Widgets: Basketball and Volleyball play-by-play word wrapping fix for mobile/small screen devices

--- a/widgets/src/less/base/base.less
+++ b/widgets/src/less/base/base.less
@@ -440,6 +440,7 @@ label {
 
             th,
             td {
+                vertical-align: middle;
                 &.digital-scout-play-by-play-team {
                     img.digital-scout-logo {
                         margin-right: 5px;
@@ -449,14 +450,10 @@ label {
                     }
                     white-space: nowrap;
                 }
-            }
-
-            td {
-                vertical-align: middle;
-            }
-            .digital-scout-play-by-play-team-away {
-                text-align: right;
-                white-space: normal;
+                &.digital-scout-play-by-play-team-away {
+                    text-align: right;
+                    white-space: normal;
+                }
             }
         }
     }
